--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -7,11 +7,12 @@ jobs:
       matrix:
         node-version: [10.x, 11.x]
     steps:
-    - uses: actions/checkout@v1
-    - name: using Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: building readme.md
-      run: |
-        node index
+      - uses: actions/checkout@v1
+      - name: using Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: building README & CONTRIBUTING .md
+        run: |
+          npm install
+          node build
