gh actions tests

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -16,3 +16,5 @@ jobs:
         run: |
           npm install
           node build
+      - uses: srt32/git-actions@v0.0.3
+      - args: git status
