--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -16,5 +16,6 @@ jobs:
         run: |
           npm install
           node build
-      - uses: srt32/git-actions@v0.0.3
-      - args: git status
+      - uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GH_TOKEN }}
