merges a 'working' master push version

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [10.x, 11.x]
+        node-version: [10.x]
     steps:
       - uses: actions/checkout@v1
       - name: using Node.js ${{ matrix.node-version }}
