--- a/goodies.toml
+++ b/goodies.toml
@@ -1,9 +1,7 @@
 ["Heroku"]
-description = "An awesome tool"
-contributor = "@d3portillo"
+description = "Heroku is a cloud platform that lets companies build, deliver, monitor and scale apps — we're the fastest way to go from idea to URL, bypassing all those infrastructure headaches."
+website= "https://www.heroku.com"
 
-["Herwoku"]
-description = "An awesowme tool"
-contributor = "@d3portillo"
-website = "anurl"
-type = "tool"
+["Codepen"]
+description = "An online code editor, learning environment, and community for front-end web development using HTML, CSS and JavaScript code snippets."
+website = "https://codepen.io/"
