--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,5 +1,7 @@
 name: Updating readme file
-on: [push]
+on:
+  pull_request:
+    types: [closed]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -7,6 +9,7 @@ jobs:
       matrix:
         node-version: [10.x]
     steps:
+      - uses: actions/checkout@v1
       - name: using Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -18,6 +21,6 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v2.1.0
         with:
           commit_message: Updates README & CONTRIBUTING
-          branch: ${{ github.head_ref }}
+          branch: master
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
