yaay! , hope it works :/

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -10,6 +10,8 @@ jobs:
         node-version: [10.x]
     steps:
       - uses: actions/checkout@v1
+        with:
+          ref: refs/heads/master
       - name: using Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
