--- a/goodies.toml
+++ b/goodies.toml
@@ -64,3 +64,9 @@ description = "Slack but opensource"
 website = "https://mattermost.com/"
 contributor = "@glopez97"
 type = "tool"
+
+["Repl.it"]
+description = "An online IDE for learn, build, collaborate, and host all in one place."
+website = "https://repl.it/"
+contributor = "@SorielV"
+type = "tool"
