tryes to fix ghactions errors

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
         with:
-          ref: refs/heads/master
+          ref: master
       - name: using Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
