--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,5 +1,10 @@
 name: Checking toml syntax
-on: [push]
+on:
+  pull_request:
+    types:
+      - opened
+      - edited
+      - reopened
 jobs:
   build:
     runs-on: ubuntu-latest
