--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
     "toml": "^3.0.0"
+  },
+  "scripts": {
+    "build": "node ./src/build.js",
+    "test": "node ./src/test.js"
   }
 }
