--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,7 +19,7 @@ jobs:
       - name: building README & CONTRIBUTING .md
         run: |
           npm install
-          node build
+          npm run build
       - name: Adding new goodies...
         uses: "pascalgn/automerge-action@43fd7e11ee532218966343a262f10771b5eff978"
         env:
