--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,6 +21,6 @@ jobs:
           npm install
           npm run build
       - name: Adding new goodies...
-        uses: "pascalgn/automerge-action@43fd7e11ee532218966343a262f10771b5eff978"
-        env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        uses: mikeal/publish-to-github-action@master
+          env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
