--- a/goodies.toml
+++ b/goodies.toml
@@ -104,3 +104,16 @@ description = "Cursos online de desarrollo web frontend, backend, desarrollo mó
 contributor = "@ivigilm"
 website = "https://www.youtube.com/user/codigofacilito"
 type = "yt"
+
+["Fazt"]
+description = "En este Canal Podrás Encontrar Todo de Programación y Desarrollo Web con las mejores Prŕacticas."
+contributor = "@Ariel2294"
+website = "https://www.youtube.com/channel/UCX9NJ471o7Wie1DQe94RVIg/"
+type = "yt"
+
+
+["Fazt"]
+description = "En este Canal Podrás Encontrar Todo de Programación y Desarrollo Web con las mejores Prŕacticas."
+contributor = "@Ariel2294"
+website = "https://www.youtube.com/channel/UCX9NJ471o7Wie1DQe94RVIg/"
+type = "yt"
