--- a/goodies.toml
+++ b/goodies.toml
@@ -80,6 +80,13 @@ type = "tool"
 description = "Minimalistic markdown editor"
 website = "https://typora.io/"
 contributor = "@glopez97"
+type = "tool"
+
+["RegExr"]
+description = "RegExr is an online tool to learn, build, & test Regular Expressions"
+website = "https://regexr.com/"
+contributor = "@glopez97"
+type = "tool"
 
 ["Slack"]
 description = "Slack is where work flows. It's where the people you need, the information you share, and the tools you use come together to get things done."
