--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,6 +20,7 @@ jobs:
         run: |
           npm install
           npm run build
-      - uses: mikeal/publish-to-github-action@master
+      - name: Making a PR for new changes
+        uses: peter-evans/create-pull-request@v1.5.1-multi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
