merges_data[bot] :zap:

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "scripts": {
     "build": "node ./src/build.js",
-    "test": "node ./src/test.js"
+    "test": "node ./src/test.js",
+    "push": "node ./src/push.js"
   }
 }
