--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,7 +20,8 @@ jobs:
         run: |
           npm install
           npm run build
-      - name: Making a PR for new changes
-        uses: peter-evans/create-pull-request@v1.5.1-multi
+      - name: Pushing changes on README
+        run: |
+          npm run push
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TOKEN: ${{ secrets.TOKEN }}
