tries to revive this repo

--- a/.github/workflows/toml-parse.yml
+++ b/.github/workflows/toml-parse.yml
@@ -8,15 +8,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [10.x]
     steps:
       - uses: actions/checkout@v1
-      - name: using Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 12
       - name: Testing goodies.toml
         run: |
           npm install
