--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -19,6 +19,13 @@ jobs:
           npm install
           npm run build
       - name: automerge
-        uses: "pascalgn/automerge-action@v0.11.0"
-        env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+      - uses: squalrus/merge-bot@v0.1.0
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          test: true
+          reviewers: true
+          labels: automerge
+          blocking_labels: no-merge
+          checks_enabled: true
+          method: squash
+          delete_source_branch: true
