--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -1,5 +1,8 @@
 name: Updating readme file
 on:
+  pull_request:
+    types:
+      - labeled
   pull_request_review:
     types:
       - submitted
