--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -11,9 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        with:
-          ref: ${{ github.head_ref }}
-      - name: using Node.js ${{ matrix.node-version }}
+      - name: Intalling NodeJS
         uses: actions/setup-node@v1
         with:
           node-version: 12
