--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -19,14 +19,10 @@ jobs:
         run: |
           npm install
           npm run build
-      - name: automerge
+      - name: automerging
         uses: squalrus/merge-bot@v0.1.0
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           test: true
-          reviewers: true
           labels: automerge
           blocking_labels: no-merge
-          checks_enabled: true
-          method: squash
-          delete_source_branch: true
