--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -23,6 +23,5 @@ jobs:
         uses: squalrus/merge-bot@v0.1.0
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          test: true
-          labels: automerge
+          labels: automerge,ready
           blocking_labels: no-merge
