--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }}
       - name: Intalling NodeJS
         uses: actions/setup-node@v1
         with:
@@ -15,7 +17,6 @@ jobs:
         run: |
           npm install
           npm run build
-      - name: automerging
-        uses: plm9606/automerge_actions@1.2.2
+      - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          commit_message: Auto updates README.md
