--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -1,7 +1,7 @@
 name: Updating readme file
 on:
-  pull_request:
-    types: [labeled]
+  pull_request_review:
+    types: [submitted]
 jobs:
   build:
     runs-on: ubuntu-latest
