--- a/.github/workflows/autoreadme.yml
+++ b/.github/workflows/autoreadme.yml
@@ -2,6 +2,8 @@ name: Builds README
 on:
   schedule:
     - cron: "0 */8 * * *"
+  push:
+    branches: [master]
 jobs:
   build:
     runs-on: ubuntu-latest
