--- a/goodies.toml
+++ b/goodies.toml
@@ -182,6 +182,11 @@ description = "#NuncaParesDeAprender #PlatziSePagaSolo CEO, Cofounder at Platzi"
 website = "https://twitter.com/freddier"
 type = "twitter"
 
+["Elvis Gomez"]
+description = "Aprender y crear con JS es lo maximo!"
+website = "https://www.linkedin.com/in/elvisgmz/"
+type = "linkedin"
+
 ["OverAPI"]
 description = "Programming & Libraries' Cheat Sheets"
 website = "https://overapi.com/"
