agrega SoldierHD cómo contributor
Te agregué para que aparezcas en el README.md : ) . agregué `contributor`

--- a/goodies.toml
+++ b/goodies.toml
@@ -190,4 +190,4 @@ type = "linkedin"
 ["OverAPI"]
 description = "Programming & Libraries' Cheat Sheets"
 website = "https://overapi.com/"
-
+contributor = "@SoldierHD"
