--- a/goodies.toml
+++ b/goodies.toml
@@ -210,4 +210,4 @@ money = "freemium"
 description = "ReadMe Generator for GitHub Profile"
 website = "https://github.com/rahuldkjain/github-profile-readme-generator"
 contributor = "@SoldierHD"
-type = "Github"
+type = "tool"
