--- a/goodies.toml
+++ b/goodies.toml
@@ -231,10 +231,16 @@ contributor = "@CSharles"
 type = "tool"
 money = "freemium"
 
-
 ["StackOverflow en Español"]
 description = "Donde los desarrolladores y tecnologos ganan y comparten conocimiento"
 website = "es.stackoverflow.com"
 contributor = "@CSharles"
 type = "none"
+money = "free"
+
+["La Cocina del Código"]
+description = "Canal sobre diseño web y JavaScript"
+website = "https://www.youtube.com/c/LaCocinadelC%C3%B3digo/"
+contributor = "@CSharles"
+type = "yt"
 money = "free"
